Add a bunch of stuff.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,13 +29,15 @@
         <activity
             android:name=".Main4Activity"
             android:theme="@style/AppTheme.Dark">
+
+        </activity>
+        <activity android:name=".Main5Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main5Activity"></activity>
     </application>
 
 </manifest>
